--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,10 @@
 
 body {
     background-color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 .header {
@@ -21,4 +25,29 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.form-container {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    justify-content: center;
+    width: 350px;
+}
+
+.form-location {
+    flex: 1;
+    background: none;
+    padding: 5px;
+    border: 1px solid black;
+}
+
+.submit {
+    background: none;
+    border: none;
+}
+
+.submit img {
+    height: 25px;
+    width: 25px;
 }
