--- a/src/style.css
+++ b/src/style.css
@@ -66,3 +66,16 @@ body {
     height: 25px;
     width: 25px;
 }
+
+.card {
+    border: #333 1px solid;
+    padding: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 520;
+    width: calc(400px + 10vw);
+    height: calc(300px + 5vh);
+}
+
+.card .name {
+    font-size: 3rem;
+}
