--- a/src/style.css
+++ b/src/style.css
@@ -75,8 +75,53 @@ body {
     font-weight: 520;
     width: calc(400px + 10vw);
     height: calc(300px + 5vh);
+    background-color: rgba(213, 213, 213, .8);
 }
 
 .card .name {
     font-size: 3rem;
+}
+
+.toggle {
+    position: relative;
+}
+
+.toggle input {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.toggle .temp {
+    font-size: 2rem;
+    text-align: center;
+    display: block;
+    width: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.slider {
+    position: relative;
+    display: block;
+    cursor: pointer;
+    background-color: rgb(78, 77, 77);
+    transition: .4s;
+    width: 100px;
+    height: 50px;
+}
+
+.slider:before{
+    content: "";
+    position: absolute;
+    height: 40px;
+    width: 45px;
+    background-color: #eee;
+    transition: .4s;
+    top: 5px;
+    left: 5px;
+}
+
+input:checked + .slider::before{
+    transform: translateX(45px);
 }
